--- a/index.html
+++ b/index.html
@@ -17,8 +17,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hellow, world!</h1>
-  <p id="data"></p>
+  <div>
+    <h1 id="title"><a href="http://t.me/vsecoder">@vsecoder</a> bio</h1>
+    <p id="paragraf"></p>
+    <p>🧑‍💻 Fullstack developer:</p>
+    <pre>
+personal_info = {
+    "name": "Всеволод",
+    "username": "vsecoder",
+    "birthday": "28.03",
+    "age": 0x10
+}
+  </pre>
+  </div>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script id="rendered-js" src="script.js"></script>
 </body>
