--- a/index.html
+++ b/index.html
@@ -21,16 +21,10 @@
     <h1 id="title"><a href="http://t.me/vsecoder">@vsecoder</a> bio</h1>
     <p id="paragraf"></p>
     <p>🧑‍💻 Fullstack developer:</p>
-    <pre>
-personal_info = {
-    "name": "Всеволод",
-    "username": "vsecoder",
-    "birthday": "28.03",
-    "age": 0x10
-}
-  </pre>
+    <p>This page is by default, if you are its owner, go and change the "bio_url" configuration!</p>
   </div>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script id="rendered-js" src="script.js"></script>
+  <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
 </body>
 </html>
