--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 </head>
 <body>
   <div>
-    <h1 id="title"><a href="http://t.me/vsecoder">@vsecoder</a> bio</h1>
+    <h1 id="title"></h1>
     <p id="paragraf"></p>
-    <p>🧑‍💻 Fullstack developer:</p>
     <p>This page is by default, if you are its owner, go and change the "bio_url" configuration!</p>
   </div>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script id="rendered-js" src="script.js"></script>
-  <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
 </body>
 </html>
