--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div>
     <h1 id="title"></h1>
     <p id="paragraf"></p>
-    <p>This page is by default, if you are its owner, go and change the "bio_url" configuration!</p>
+    <p>This page is by default, if you are its owner, go <a href="https://telegra.ph/Sozdanie-BioPage-stranicy-06-04">read</a>!</p>
   </div>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script id="rendered-js" src="script.js"></script>
